rust/src/lexis/snapshots/lucid_suggest__lexis__matching__tests__match_text_pair_first.snap
---
source: src/lexis/matching.rs
expression: r.matches(&q)
---
[
    WordMatch { [rrrrrr] /1/ [qqqqq] },
]
