rust/src/lexis/snapshots/lucid_suggest__lexis__matching__tests__match_text_pair_unfinished.snap
---
source: src/lexis/matching.rs
expression: r.matches(&q)
---
[
    WordMatch { [rrrrrrr] /1/ [qqqqqqq] },
    WordMatch { [rrr]rrr /0/ [qqq].. },
]
