rust/src/lexis/snapshots/lucid_suggest__lexis__matching__tests__match_word_full_fuzzy_insertion.snap
---
source: src/lexis/matching.rs
expression: r.matches(&q)
---
Some(
    WordMatch { [rrrrrrr] /1/ [qqqqqqqq] },
)
