rust/src/lexis/snapshots/lucid_suggest__lexis__matching__tests__match_word_partial_fuzzy_transposition.snap
---
source: src/lexis/matching.rs
expression: r.matches(&q)
---
Some(
    WordMatch { [rrrrr]rr /1/ [qqqqq].. },
)
